; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_issue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin.c_issue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thin_c = type { i32, %struct.pool* }
%struct.pool = type { i32, i32 }
%struct.bio = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.thin_c*, %struct.bio*)* @issue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @issue(%struct.thin_c* %0, %struct.bio* %1) #0 {
  %3 = alloca %struct.thin_c*, align 8
  %4 = alloca %struct.bio*, align 8
  %5 = alloca %struct.pool*, align 8
  %6 = alloca i64, align 8
  store %struct.thin_c* %0, %struct.thin_c** %3, align 8
  store %struct.bio* %1, %struct.bio** %4, align 8
  %7 = load %struct.thin_c*, %struct.thin_c** %3, align 8
  %8 = getelementptr inbounds %struct.thin_c, %struct.thin_c* %7, i32 0, i32 1
  %9 = load %struct.pool*, %struct.pool** %8, align 8
  store %struct.pool* %9, %struct.pool** %5, align 8
  %10 = load %struct.thin_c*, %struct.thin_c** %3, align 8
  %11 = load %struct.bio*, %struct.bio** %4, align 8
  %12 = call i32 @bio_triggers_commit(%struct.thin_c* %10, %struct.bio* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load %struct.bio*, %struct.bio** %4, align 8
  %16 = call i32 @generic_make_request(%struct.bio* %15)
  br label %39

17:                                               ; preds = %2
  %18 = load %struct.thin_c*, %struct.thin_c** %3, align 8
  %19 = getelementptr inbounds %struct.thin_c, %struct.thin_c* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i64 @dm_thin_aborted_changes(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load %struct.bio*, %struct.bio** %4, align 8
  %25 = call i32 @bio_io_error(%struct.bio* %24)
  br label %39

26:                                               ; preds = %17
  %27 = load %struct.pool*, %struct.pool** %5, align 8
  %28 = getelementptr inbounds %struct.pool, %struct.pool* %27, i32 0, i32 0
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @spin_lock_irqsave(i32* %28, i64 %29)
  %31 = load %struct.pool*, %struct.pool** %5, align 8
  %32 = getelementptr inbounds %struct.pool, %struct.pool* %31, i32 0, i32 1
  %33 = load %struct.bio*, %struct.bio** %4, align 8
  %34 = call i32 @bio_list_add(i32* %32, %struct.bio* %33)
  %35 = load %struct.pool*, %struct.pool** %5, align 8
  %36 = getelementptr inbounds %struct.pool, %struct.pool* %35, i32 0, i32 0
  %37 = load i64, i64* %6, align 8
  %38 = call i32 @spin_unlock_irqrestore(i32* %36, i64 %37)
  br label %39

39:                                               ; preds = %26, %23, %14
  ret void
}

declare dso_local i32 @bio_triggers_commit(%struct.thin_c*, %struct.bio*) #1

declare dso_local i32 @generic_make_request(%struct.bio*) #1

declare dso_local i64 @dm_thin_aborted_changes(i32) #1

declare dso_local i32 @bio_io_error(%struct.bio*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @bio_list_add(i32*, %struct.bio*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
